--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -4,4 +4,10 @@
     --anti-flash-white:     #EDF2F4;
     --red-pantone:          #EF233C;
     --fire-engine-red:      #D90429;
+
+    --magnolia:             #F7F0F5;
+    --Dun:                  #DECBB7;
+    --battleship-gray:      #8F857D;
+    --walnut-brown:         #5C5552;
+    --van-dyke:             #433633;
 }
