--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -6,7 +6,7 @@
     --fire-engine-red:      #D90429;
 
     --magnolia:             #F7F0F5;
-    --Dun:                  #DECBB7;
+    --dun:                  #DECBB7;
     --battleship-gray:      #8F857D;
     --walnut-brown:         #5C5552;
     --van-dyke:             #433633;
