--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,6 @@ body {
     width: 80vw;
     height: 80vh;
     margin: auto;
-    display: flex;
     justify-content:center;
     margin-top: 10vh;
 }
@@ -37,16 +36,18 @@ input[name="search_input"]{
     border: solid var(--dun);
     border-radius: 15px;
     padding: 20px;
-    width: 100%;
+    width: 80vw;
     outline: none;
+    position: fixed;
+    bottom: 5vh;
 }
 
 .quick_links {
     display: flex;
 }
 
-.quick_link a:hover,
-.quick_link :focus {
+.quick_link a:hover img,
+.quick_link :focus img {
     animation: scale-up 50ms;
     transform: scale(1.2);
 }
@@ -54,9 +55,11 @@ input[name="search_input"]{
 .quick_link {
     padding: 15px;
     width: 10%;
+    margin: auto;
     color: var(--dun);
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 .quick_link a {
@@ -70,6 +73,7 @@ input[name="search_input"]{
     aspect-ratio: 1;
     border-radius: 25px;
     display: flex;
+    justify-content: center;
 }
 
 .quick_link_image img {
